[Complete][Bug] #31875 Task listing in dashboard - If the CA name is too long then view should be proper

--- a/src/pages/dashboard/CA/dashboard_ca.scss
+++ b/src/pages/dashboard/CA/dashboard_ca.scss
@@ -58,6 +58,8 @@
         background: #2C7FCA;
         border-radius: 0px;
         font-weight: 500;
+        white-space: normal;
+        text-align: left;
       }
 
       .row_val {
